# jdplus-main-python-microservices-refactoring

./: MICROSERVICES_REFACTORING_PLAN.md  POC_ASSESSMENT.md  README.md
microservices/: IMPLEMENTATION_STATUS.md  MASTER_TEST_SUMMARY.md
microservices/jdemetra-arima-service/: Dockerfile  README.md  TEST_SUMMARY.md  pyproject.toml
microservices/jdemetra-arima-service/src/: main.py
microservices/jdemetra-arima-service/src/api/: arima.py
microservices/jdemetra-arima-service/src/core/: arima_estimation.py  config.py  diagnostics.py  forecasting.py
microservices/jdemetra-arima-service/src/models/: storage.py
microservices/jdemetra-arima-service/src/schemas/: requests.py  responses.py
microservices/jdemetra-arima-service/tests/: test_arima_api.py
microservices/jdemetra-common/: README.md  TEST_SUMMARY.md  pyproject.toml
microservices/jdemetra-common/src/jdemetra_common/: __init__.py
microservices/jdemetra-common/src/jdemetra_common/models/: __init__.py  arima.py  decomposition.py  timeseries.py
microservices/jdemetra-common/src/jdemetra_common/schemas/: __init__.py  arima.py  timeseries.py
microservices/jdemetra-common/tests/: test_models.py  test_schemas.py
microservices/jdemetra-io-service/: README.md  TEST_SUMMARY.md  pyproject.toml
microservices/jdemetra-io-service/src/: main.py
microservices/jdemetra-io-service/src/api/: io.py
microservices/jdemetra-io-service/src/core/: config.py
microservices/jdemetra-io-service/src/formatters/: __init__.py  csv_formatter.py  excel_formatter.py  json_formatter.py  xml_formatter.py  yaml_formatter.py
microservices/jdemetra-io-service/src/parsers/: __init__.py  csv_parser.py  excel_parser.py  (+3 more)
microservices/jdemetra-io-service/tests/: test_parsers_formatters.py
microservices/jdemetra-math-service/: Dockerfile  README.md  TEST_SUMMARY.md  docker-compose.yml  pyproject.toml
microservices/jdemetra-math-service/proto/: math_service.proto
microservices/jdemetra-math-service/src/: generate_proto.py  server.py
microservices/jdemetra-math-service/src/core/: matrix_ops.py  polynomial_ops.py
microservices/jdemetra-math-service/tests/: test_grpc_server.py  test_matrix_ops.py  test_polynomial_ops.py
microservices/jdemetra-stats-service/: Dockerfile  README.md  TEST_SUMMARY.md  pyproject.toml
microservices/jdemetra-stats-service/src/: main.py
microservices/jdemetra-stats-service/src/api/: stats.py
microservices/jdemetra-stats-service/src/core/: descriptive.py  distributions.py  tests.py
microservices/jdemetra-stats-service/src/schemas/: requests.py  responses.py
microservices/jdemetra-stats-service/tests/: test_stats_api.py
microservices/jdemetra-tramoseats-service/: Dockerfile  README.md  TEST_SUMMARY.md  pyproject.toml
microservices/jdemetra-tramoseats-service/src/: main.py  worker.py
microservices/jdemetra-tramoseats-service/src/api/: tramoseats.py
microservices/jdemetra-tramoseats-service/src/core/: config.py  diagnostics.py  seats.py  tramo.py
microservices/jdemetra-tramoseats-service/src/schemas/: requests.py  responses.py  specification.py
microservices/jdemetra-tramoseats-service/src/tasks/: processing.py
microservices/jdemetra-tramoseats-service/tests/: test_tramoseats_api.py
microservices/jdemetra-ts-data-service/: Dockerfile  README.md  TEST_SUMMARY.md  docker-compose.yml  pyproject.toml
microservices/jdemetra-ts-data-service/src/: main.py
microservices/jdemetra-ts-data-service/src/api/: timeseries.py
microservices/jdemetra-ts-data-service/src/core/: config.py  transformations.py  validation.py
microservices/jdemetra-ts-data-service/src/db/: connection.py  models.py
microservices/jdemetra-ts-data-service/src/schemas/: requests.py  responses.py
microservices/jdemetra-ts-data-service/tests/: conftest.py  test_api.py  test_transformations.py  test_validation.py
microservices/jdemetra-viz-service/: Dockerfile  README.md  TEST_SUMMARY.md  pyproject.toml
microservices/jdemetra-viz-service/src/: __init__.py  main.py
microservices/jdemetra-viz-service/src/api/: viz.py
microservices/jdemetra-viz-service/src/core/: cache.py  config.py
microservices/jdemetra-viz-service/src/plotters/: __init__.py  base.py  decomposition.py  diagnostics.py  forecast.py  spectrum.py  timeseries.py
microservices/jdemetra-viz-service/src/schemas/: __init__.py  requests.py  responses.py
microservices/jdemetra-viz-service/tests/: __init__.py  test_plotters.py  test_viz_api.py
microservices/jdemetra-x13-service/: Dockerfile  README.md  TEST_SUMMARY.md  pyproject.toml
microservices/jdemetra-x13-service/src/: main.py
microservices/jdemetra-x13-service/tests/: test_x13_api.py
(+9 files in other folders)
